--- a/src/main/resources/com/tu/javafxtu/hello-view.fxml
+++ b/src/main/resources/com/tu/javafxtu/hello-view.fxml
@@ -8,13 +8,19 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TableRow?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.shape.Path?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.shape.Circle?>
+<?import impl.org.controlsfx.skin.GridRow?>
+<?import javafx.scene.shape.Line?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.tu.javafxtu.HelloController">
     <padding>
         <Insets bottom="20.0" left="10.0" right="10.0" top="20.0"/>
     </padding>
 
-    <Label fx:id="welcomeText"/>
+    <Label fx:id="welcomeText" style="-fx-font: 20 arial"/>
+    <Group fx:id="group"/>
     <TextField fx:id="heightField" text="Enter height (in cm)"/>
     <TextField fx:id="weightField" text="Enter weight (in kg)"/>
     <Button text="Calculate BMI" onAction="#onCalculateBMIClick"/>
